--- a/bin/app-deployment.yaml
+++ b/bin/app-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: app
-        image: localhost:5000/registryWebApp
+        image: localhost:5000/registrywebapp
         ports:
          - containerPort: 9393
          
